--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,9 @@ jobs:
         cache: 'npm'
     - run: |
         cd frontend
+        npm install
+    - run: |
+        cd frontend
         npm ci
     - run: |
         cd frontend
