--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -20,24 +17,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Node.js ${{ matrix.node-version }}
-      run: |
-        cd frontend
-        nvm install ${{ matrix.node-version }}
-        nvm use ${{ matrix.node-version }}
-    - name: Install Yarn
-      run: |
-        cd frontend
-        npm install -g yarn
-    - name: Install dependencies
-      run: |
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'yarn'
+    - run: |
         cd frontend
         yarn install
-    - name: Build
-      run: |
+    - run: |
         cd frontend
         yarn build --if-present
-    - name: Test
-      run: |
+    - run: |
         cd frontend
         yarn test
